Fixed grid spacing. I think.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 #container {
   display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  max-width: fit-content;
 }
 
 .cell {
